tried to fix logo and scrollbar

--- a/project-root/frontend/src/styles/home.module.css
+++ b/project-root/frontend/src/styles/home.module.css
@@ -1,3 +1,13 @@
+.body {
+    margin: 10px;
+    gap: 10px;
+    width: 100%;
+}
+
+.content {
+    padding: 10px;
+}
+
 .container {
     padding: 0;
     margin: 0;
@@ -8,17 +18,19 @@
     display: block;
 }
 
-h3 {
+.heading {
     margin-top: 4px;
     margin-bottom: 0;
     margin-left: 4px;
+    font-size: 20px;
     float: left;
 }
 
-p {
+.paragraph {
     margin-top: 4px;
     margin-left: 4px;
     float: left;
+    font-size: 12px;
     text-align: left;
 }
 
@@ -31,26 +43,29 @@ p {
     height: 56px;
 }
 
-#logo_ameti {
+.logo_ameti {
     float: left;
-    max-height: 105px;
+    height: 105px;
     width: auto;
     margin-top: 10px;
     margin-left: 10px;
     margin-bottom: 20px;
 }
 
-.home-body {
+.header {
+    width: 100%;
+}
+
+.home_body {
     padding: 15px;
-    width: 75%;
+    width: 100%;
     height: 162px;
     border: 2px solid black;
     border-radius: 11px;
-    display: flex;
     margin: 10px;
     gap: 10px;
-    clear: both;
     margin-top: 20px;
-    flex-wrap: wrap;
-    overflow-x: scroll;
+    overflow-x: auto;
+    overflow-y: hidden;
+    display: flex;
 }
